--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@phuocng/react-pdf-viewer": "^1.7.0",
+    "@react-pdf/renderer": "^1.6.13",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "bootstrap": "^4.6.0",
+    "pdfjs-dist": "^2.6.347",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-floating": "^1.0.0",
     "react-icons": "^4.2.0",
+    "react-iframe": "^1.8.0",
+    "react-pdf": "^5.1.0",
+    "react-pdf-print": "^0.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-vanilla-tilt": "^1.0.0",
