--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "bootstrap": "^4.6.0",
+    "card-deck": "^1.0.1",
     "pdfjs-dist": "^2.6.347",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
