--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@testing-library/user-event": "^12.6.2",
     "bootstrap": "^4.6.0",
     "card-deck": "^1.0.1",
+    "glassmorphism-react-ts": "^1.1.0",
     "pdfjs-dist": "^2.6.347",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-floating": "^1.0.0",
+    "react-floating-component": "^1.0.1",
     "react-icons": "^4.2.0",
     "react-iframe": "^1.8.0",
     "react-pdf": "^5.1.0",
