--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "bootstrap": "^4.6.0",
-    "card-deck": "^1.0.1",
+
     "gh-pages": "^3.1.0",
     "glassmorphism-react-ts": "^1.1.0",
     "pdfjs-dist": "^2.6.347",
@@ -25,7 +25,9 @@
     "react-pdf-print": "^0.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-tilt": "^0.1.4",
     "react-vanilla-tilt": "^1.0.0",
+    "ui-glassmorphism": "0.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
