--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "bootstrap": "^4.6.0",
-
     "gh-pages": "^3.1.0",
     "glassmorphism-react-ts": "^1.1.0",
     "pdfjs-dist": "^2.6.347",
@@ -21,6 +20,7 @@
     "react-floating-component": "^1.0.1",
     "react-icons": "^4.2.0",
     "react-iframe": "^1.8.0",
+    "react-overlays": "^4.1.1",
     "react-pdf": "^5.1.0",
     "react-pdf-print": "^0.2.0",
     "react-router-dom": "^5.2.0",
